# ICU_Multiclass_Classifier

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
mappings/: mimic_to_eicu.yaml
src/: main.ipynb  preprocess_data.py
src/eicu_pipeline/: load_data.py
src/eicu_pipeline/utils/: charts.py  diagnosis.py  patients.py
src/extra/: charts.py  confusion_star.py  mappings.py
src/mimic_pipeline/: load_data.py
src/mimic_pipeline/utils/: charts.py  diagnosis.py  icustays.py  patients.py
tests/test_extra/: test_mappings.py
tests/test_mimic_pipeline/: test_pipeline.py  test_utils_charts.py  test_utils_diagnosis.py  test_utils_icustays.py  test_utils_patients.py
