[tool.poetry]
name = "ICU_Metaclassifier"
version = "1.0.0"
description = "TODO"
authors = [
    "Eric Macias
    "IIC",
]
readme = "README.md"
keywords=["python"]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
]

packages = [
    { include = "*", from = "src" }
]

[tool.poetry.dependencies]
python = ">= 3.10.*, < 3.13"
numpy = "^1.25"
pandas = "^2.0"
matplotlib = "^3.7"
seaborn = "^0.12"
tqdm = "^4.65"
pyod = "^1.1"
scikit-learn = "^1.3"
optuna = "^4.2.1"
shap = "^0.47.1"
lightgbm = "^4.6.0"
catboost ="^1.2.7"
xgboost = "^2.1.1"
pycm = "4.3"
jax = "0.6.1"
jaxlib = "0.6.1"
numba = { version = "= 0.60.0" }
imcp = "*"
ipykernel = "^7.1.0"
ipynbname = "^2025.8.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.3.1"
pytest-cov = "3.0.0"
pytest-ruff = "0.0.5"
pytest-html = "^4.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--cov-report", "html:cover",
    "--cov-report", "term",
    "--cov-report", "xml",
    "--cov-config=pyproject.toml",
    "--cov=src",
    "--durations=20",
    "--junitxml=junit.xml",
]
filterwarnings = [
    "ignore::PendingDeprecationWarning",
    "ignore::RuntimeWarning",
    "ignore::UserWarning",
]

[tool.coverage.paths]
source = ["src/"]

[tool.coverage.report]
omit = [
    "**__init__.py",
    "**test**.py",
    "**/docs/***",
    "**.pyc"
]
show_missing = false
precision = 2

# Life-cycle

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]
assets = []
commit_message = "ci: {version}\n\nAutomatically generated by python-semantic-release"
commit_parser = "angular"
logging_use_named_masks = false
major_on_zero = true
tag_format = "{version}"

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "beta"
prerelease = false

[tool.semantic_release.branches.beta]
match = "(prerelease)"
prerelease_token = "beta"
prerelease = true

[tool.semantic_release.changelog]
template_dir = "changelog_templates"
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = [
    "^(build|chore|ci|revert|style|test|merge){1}(\\(.*\\))?(!)?:", 
    "Initial commit"
]

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false
newline_sequence = "\n"
keep_trailing_newline = false
extensions = []
autoescape = true

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "semantic-release <semantic-release>"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test", "merge"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.remote]
name = "origin"
type = "gitlab"
ignore_token_for_push = false

[tool.semantic_release.remote.token]
env = "CI_SEMVER_BOT_TOKEN"

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = false

# Lint & format

[tool.ruff]
extend-include = ["*.ipynb"] # Analyze notebooks too

select = [
    "E",   # Pycodestyle - PEP8
    "F",   # Pyflakes
    "I",   # Isort
    "B",   # Bugbear
    "D",   # Pydocstyle
    "C90", # McCabe - Complexity
    "FBT", # Boolean trap
    "C4",  # Comprehension
    "DTZ", # Datetimez
    "EM",  # Error messages
    "FA",  # Future annotations
    "ISC", # Implicit STR concat
    "ICN", # Import conventions
    "G",   # Logging format
    "RSE", # Raise parentheses
    "RET", # Unecessary return
    "SLF", # Private member access
    "ERA", # Commented code
    "PL",  # Pylint
    "RUF", # Ruff specific rules
]

ignore = [
    "E203",   # Whitespace before punctuation - interferes with Black
    "E501",   # Line too long - Ignored so long strings (such as URLs) do not interfere
    "D100",   # Undocumented public module
    "D104",   # Undocumented public package
    "D200",   # One-line docstring should fit on one line with quotes
    "RUF013", # Implicit optional
    "ERA001", #
    "C408", #
    "B023", #
    "B018", #
    "D103", #
    "C901", #
    "PLR0912", #
    "G002", #
    "G004", #
    "PLW2901", #
    "B018", #
    "RET505", #
    "D401", #
    "PLR0915", #
    "D101", #
    "D102", #
    "RET504", #
    "D205", #
    "D400", #
    "RET504", #
    "PLR0915", #
    "PLR0913", #
    "PLR2004", #
    "PLR2004", #
    "PLR2004", #
    "PLR2004", #
    "B007", #
    "FBT002", #
    "PLR5501", #
    "RUF015", #
    "B905", #
    "FBT003", #
    "FBT002", #
    "EM102", #
    "C404", #
    "C417", #
    "ISC001", #

]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".dvc",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "__init__.py",
    "docs/**",
    "src/extra/confusion_star.py"
]

line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.11
target-version = "py311"

src = ["src"]

[tool.ruff.pydocstyle]
convention = 'numpy'


[tool.ruff.isort]
known-first-party = [
    "src",
]

[tool.ruff.pep8-naming]
ignore-names = ["X"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"] # Ignore imported but unused in init
"*.ipynb" = [] # Ignore this rules when analyzing notebooks

[tool.numpydoc_validation]
checks = [
    "all",  # Report on all checks, except the below
    "EX01", # Not found Examples section
    "GL01", # Docstring text (summary) should start in the line immediately after the opening quotes
    "SA01", # Not found See Also section
    "ES01", # Not found Extended section
    "GL08", # Object does not have a docstring, this error is controlled by pydocstyle
]

